--- a/Depay.html
+++ b/Depay.html
@@ -13,7 +13,7 @@
                 <a href="https://youtu.be/StldxG_te4c?si=utuNpyCos809HmmN" target="_blank">
                 mundial de Qatar 2022</a>,
                 tuvo una infancia traumática y 
-                pide que no asocien su nombre al de su padre. Los detalles
+                pide que no asocien su nombre al de su padre.
             </p>
             <p>
                 Detrás de sus goles, hay una historia oculta. 
@@ -24,4 +24,7 @@
                 Dennis Depay, quien lo abandonó durante su infancia.
             </p>
     </body>
+    <footer>
+        <p> Nota escribida por Sino, Ambrosino</p> 
+    </footer>
 </html>
